# cookies_n_cream

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
doc/: mqtt_telemetry.md  sheet.md
doc/job/: error_in_stablish_connection.odt
exercises/: 01_wifi_station.md
main/: CMakeLists.txt  ads1115.c  ads1115.h  bh1750.c  bh1750.h  bmp280_probe.c  bmp280_probe.h  i2c_bus.c  i2c_bus.h  i2c_scanner.c  i2c_scanner.h  main.c  mqtt_config.h.example  mqtt_telemetry.c  mqtt_telemetry.h  time_sync.c  time_sync.h  wifi_config.c  wifi_config.h  wifi_credentials.h.example
ref/: certs_DEV-0B4B818E.json
reports/: summary_report.md
tools/: check-esp-env.ps1  check-esp-env.sh  esp-idf-env.ps1  esp-idf-env.sh  find-esp-port.ps1  find-esp-port.sh  idf.ps1  idf.sh  import-cloud-mqtt-env.ps1  import-mqtt-certs.ps1  import-mqtt-certs.sh  install-esp-idf-fedora.sh
